# colima-desktop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROMPT.md  Package.resolved  Package.swift  README.md  appcast.xml  project.yml
ColimaUITests/: ColimaUITests.swift
ColimaUIUITests/: AIWorkloadsUITests.swift  AppShellUITests.swift  ColimaLifecycleUITests.swift  CommunityUITests.swift  ConfigurationUITests.swift  ContainerManagementUITests.swift  ImageManagementUITests.swift  KubernetesUITests.swift  MachinesUITests.swift  MonitoringUITests.swift  NetworkManagementUITests.swift  ProfileManagementUITests.swift  RuntimeControlsUITests.swift  VolumeManagementUITests.swift
daemon/: go.mod  go.sum
docs/: ARCHITECTURE.md  DEVELOPMENT.md  INSTALL.md  e2e-real-mode-execution.md  gap-report.md  parity-matrix.md  truth-table.csv  truth-table.md
exploration/: README.md  ground-truth.json
linux/: Cargo.toml  README.md  build.rs
linux/proto/: colima_ui.proto
linux/src/: app_state.rs  client.rs  dependency_manager.rs  main.rs  ui_helpers.rs
linux/src/views/: ai_workloads.rs  configuration.rs  containers.rs  dashboard.rs  images.rs  kubernetes.rs  machines.rs  mod.rs  monitoring.rs  networks.rs  onboarding.rs  profiles.rs  runtime.rs  volumes.rs
packaging/: AppIcon.icns  ColimaDesktop.entitlements  Info.plist
proto/: colima_ui.proto
scripts/: changelog.sh  explore-ax.sh  explore.sh  gen-truth-table.py  github-release.sh  make-icon.sh  package.sh  run_tests.sh  run_ui_tests.sh  run_vm_tests.sh  sparkle-appcast.sh  sparkle-keys.sh  verify.sh  (+1 more)
(+322 files in other folders)
